Totally refactored Javascript to a properly object-oriented style

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -280,7 +280,7 @@ p{
 }
 
 /* Orange */
-#resultColour.positiveandlively{
+#resultColour.positiveAndLively{
 	background: #f9c667;
 	background: -moz-linear-gradient(top,  #f9c667 0%, #f79621 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f9c667), color-stop(100%,#f79621));
@@ -292,7 +292,8 @@ p{
 }
 
 /* Soft pink */
-#resultColour.caring, #resultColour.quietpositive{
+#resultColour.caring, 
+#resultColour.quietPositive{
 	background: #febbbb;
 	background: -moz-linear-gradient(top,  #febbbb 0%, #fe9090 45%, #ff5c5c 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#febbbb), color-stop(45%,#fe9090), color-stop(100%,#ff5c5c));
@@ -303,12 +304,13 @@ p{
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#febbbb', endColorstr='#ff5c5c',GradientType=0 );
 }
 
-#tblResult.caring, #tblResult.quietpositive{
+#tblResult.caring, 
+#tblResult.quietPositive{
 	color: #2b0000;
 }
 
 /* Greyey blue */
-#resultColour.negativethoughts{
+#resultColour.negativeThoughts{
 	background: #a7cfdf;
 	background: -moz-linear-gradient(top,  #a7cfdf 0%, #23538a 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a7cfdf), color-stop(100%,#23538a));
@@ -319,7 +321,7 @@ p{
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a7cfdf', endColorstr='#23538a',GradientType=0 );
 }
 
-#tblResult.negativethoughts{
+#tblResult.negativeThoughts{
 	color: white;
 }
 
@@ -339,7 +341,8 @@ p{
 }
 
 /* Red */
-#resultColour.agitation, #resultColour.negativeandforceful{
+#resultColour.agitation, 
+#resultColour.negativeAndForceful{
 	background: #a90329;
 	background: -moz-linear-gradient(top,  #a90329 0%, #8f0222 44%, #6d0019 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a90329), color-stop(44%,#8f0222), color-stop(100%,#6d0019));
@@ -350,12 +353,13 @@ p{
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a90329', endColorstr='#6d0019',GradientType=0 );
 }
 
-#tblResult.agitation, #tblResult.negativeandforceful{
+#tblResult.agitation, 
+#tblResult.negativeAndForceful{
 	color: white;
 }
 
 /* Soft Blue */
-#resultColour.positivethoughts{
+#resultColour.positiveThoughts{
 	background: #a9e4f7;
 	background: -moz-linear-gradient(top,  #a9e4f7 0%, #0fb4e7 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a9e4f7), color-stop(100%,#0fb4e7));
@@ -367,7 +371,7 @@ p{
 }
 
 /* Grey */
-#resultColour.negativeandpassive{
+#resultColour.negativeAndPassive{
 	background: #7d7e7d;
 	background: -moz-linear-gradient(top,  #7d7e7d 0%, #0e0e0e 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7d7e7d), color-stop(100%,#0e0e0e));
@@ -378,12 +382,12 @@ p{
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=0 );
 }
 
-#tblResult.negativeandpassive{
+#tblResult.negativeAndPassive{
 	color: #DDD;
 }
 
 /* Green */
-#resultColour.negativeandnotincontrol{
+#resultColour.negativeAndNotInControl{
 	background: #f8ffe8;
 	background: -moz-linear-gradient(top,  #f8ffe8 0%, #e3f5ab 33%, #b7df2d 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8ffe8), color-stop(33%,#e3f5ab), color-stop(100%,#b7df2d));
@@ -394,6 +398,6 @@ p{
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8ffe8', endColorstr='#b7df2d',GradientType=0 );
 }
 
-#tblResult.negativeandnotincontrol{
+#tblResult.negativeAndNotInControl{
 	color: #414F10;
 }
