--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -20,7 +20,7 @@ a:hover{
 }
 
 .option{
-	width: 70px;
+	width: 75px;
 	height: 60px;
 }
 
@@ -34,7 +34,7 @@ a:hover{
 .option label{
 	float: left;
 	clear: left;
-	width: 70px;
+	width: 100%;
 	text-align: center;
 	font-size: 0.9em;
 	text-shadow: 0 -1px 0 rgba(255,255,255,0.4);
@@ -197,14 +197,14 @@ p{
 .optionsWrap{
 	top: 0;
 	right: 0;
-	width: 90px;
+	width: 79px;
 	box-shadow: inset 0 1px 3px rgba(255,255,255,0.4), -1px 0 1px rgba(0,0,0,0.3);
 
 }
 
 .boxLining{
 	top: 0;
-	width: 86px;
+	width: 75px;
 	right: 0;
 	box-shadow: inset 0 2px 4px rgba(0,0,0,0.3), inset 0 -1px 2px rgba(0,0,0,0.2);
 	border-bottom: 2px solid rgba(255,255,255,0.3);
